--- a/index.html
+++ b/index.html
@@ -116,14 +116,76 @@
                         <div class="site-search panel panel-info">
                               <div class="panel-heading">Поиск</div>
                               <div class="panel-body">
-                                    Тело
+                                    <form action="search">
+                                          <div class="input-group input-group-lg">
+                                                <input class="form-control" type="search" placeholder="Поиск по сайту">
+                                                <span class="input-group-btn">
+                                                      <button class="btn btn-default" type="button">
+                                                            <span class="glyphicon glyphicon-search"></span>
+                                                      </button>
+                                                </span>
+                                          </div>
+                                    </form>
                               </div>
                         </div>
 
                         <div class="user-login panel panel-info">
                               <div class="panel-heading">Пользователь</div>
                               <div class="panel-body">
-                                    Тело
+
+
+
+
+                                    <ul class="nav nav-tabs" role="tablist">
+                                          <li role="presentation" class="active"><a href="#user-login-sidebar"
+                                                      aria-controls="user-login-sidebar" role="tab"
+                                                      data-toggle="tab">Login</a>
+                                          </li>
+                                          <li role="presentation"><a href="#user-registration-sidebar"
+                                                      aria-controls="user-registration-sidebar" role="tab"
+                                                      data-toggle="tab">Reg</a>
+                                          </li>
+
+                                    </ul>
+
+
+                                    <div class="tab-content">
+                                          <div role="tabpanel" class="tab-pane fade in active" id="user-login-sidebar">
+                                                <form action="login">
+                                                      <div class="form-group">
+                                                            <input class="form-control input-lg" type="text"
+                                                                  placeholder="Логин">
+                                                      </div>
+                                                      <div class="form-group">
+                                                            <input class="form-control input-lg" type="password"
+                                                                  placeholder="Пароль">
+                                                      </div>
+                                                      <button class="btn btn-default btn-block btn-lg"
+                                                            type="submit">Вход</button>
+                                                </form>
+                                          </div>
+                                          <div role="tabpanel" class="tab-pane fade" id="user-registration-sidebar">
+                                                <form action="registration">
+                                                      <div class="form-group">
+                                                            <input class="form-control input-lg" type="text"
+                                                                  placeholder="Логин">
+                                                      </div>
+                                                      <div class="form-group">
+                                                            <input class="form-control input-lg" type="password"
+                                                                  placeholder="Пароль">
+                                                      </div>
+                                                      <div class="form-group">
+                                                            <input class="form-control input-lg" type="email"
+                                                                  placeholder="Email">
+                                                      </div>
+                                                      <button class="btn btn-default btn-block btn-lg"
+                                                            type="submit">Регистрация</button>
+                                                </form>
+                                          </div>
+                                    </div>
+
+
+
                               </div>
                         </div>
 
