--- a/index.html
+++ b/index.html
@@ -132,24 +132,23 @@
                         <div class="user-login panel panel-info">
                               <div class="panel-heading">Пользователь</div>
                               <div class="panel-body">
-
-
-
-
-                                    <ul class="nav nav-tabs" role="tablist">
+                                    <ul class="user-login__tabs nav nav-tabs" role="tablist">
                                           <li role="presentation" class="active"><a href="#user-login-sidebar"
-                                                      aria-controls="user-login-sidebar" role="tab"
-                                                      data-toggle="tab">Login</a>
+                                                      aria-controls="user-login-sidebar" role="tab" data-toggle="tab">
+                                                      <span class="glyphicon glyphicon-log-in"></span>
+                                                </a>
                                           </li>
-                                          <li role="presentation"><a href="#user-registration-sidebar"
+                                          <li role=" presentation"><a href="#user-registration-sidebar"
                                                       aria-controls="user-registration-sidebar" role="tab"
-                                                      data-toggle="tab">Reg</a>
+                                                      data-toggle="tab">
+                                                      <span class="glyphicon glyphicon-user"></span>
+                                                </a>
                                           </li>
 
                                     </ul>
 
 
-                                    <div class="tab-content">
+                                    <div class="user-login__content tab-content">
                                           <div role="tabpanel" class="tab-pane fade in active" id="user-login-sidebar">
                                                 <form action="login">
                                                       <div class="form-group">
@@ -192,14 +191,93 @@
                         <div class="site-news panel panel-info">
                               <div class="panel-heading">Новости сайта</div>
                               <div class="panel-body">
-                                    Тело
+                                    <div class="site-news-item">
+                                          <div class="site-news-item__image thumbnail">
+                                                <img src="assets/img/75x75.png" alt="картинка">
+                                          </div>
+                                          <div class="site-news-item__title">
+                                                <a href="">Мы запустили новый сервис - КиноМонстр</a>
+                                          </div>
+                                          <div class="site-news-item__date">1 мая 2021</div>
+                                    </div>
+                                    <div class="site-news-item">
+                                          <div class="site-news-item__image thumbnail">
+                                                <img src="assets/img/75x75.png" alt="картинка">
+                                          </div>
+                                          <div class="site-news-item__title">
+                                                <a href="">На сайте добавлен новый функционал</a>
+                                          </div>
+                                          <div class="site-news-item__date">7 мая 2021</div>
+                                    </div>
+                                    <div class="site-news-item">
+                                          <div class="site-news-item__image thumbnail">
+                                                <img src="assets/img/75x75.png" alt="картинка">
+                                          </div>
+                                          <div class="site-news-item__title">
+                                                <a href="">Скорость скачивания фильмов увеличена</a>
+                                          </div>
+                                          <div class="site-news-item__date">10 мая 2021</div>
+                                    </div>
+                                    <div class="site-news-item">
+                                          <div class="site-news-item__image thumbnail">
+                                                <img src="assets/img/75x75.png" alt="картинка">
+                                          </div>
+                                          <div class="site-news-item__title">
+                                                <a href="">Оптимизирована производительность сервера</a>
+                                          </div>
+                                          <div class="site-news-item__date">11 мая 2021</div>
+                                    </div>
+                                    <div class="site-news-item">
+                                          <div class="site-news-item__image thumbnail">
+                                                <img src="assets/img/75x75.png" alt="картинка">
+                                          </div>
+                                          <div class="site-news-item__title">
+                                                <a href="">Количество пользователей перевалила за 10 000</a>
+                                          </div>
+                                          <div class="site-news-item__date">14 мая 2021</div>
+                                    </div>
                               </div>
                         </div>
 
                         <div class="top-films panel panel-info">
                               <div class="panel-heading">Рейтинг фильмов</div>
-                              <div class="panel-body">
-                                    Тело
+                              <div class="top-films__body panel-body">
+                                    <div class="top-films__list list-group">
+                                          <a class="top-films__item list-group-item" href="#">Марсианин
+                                                <span class="top-film__badge badge">8.9</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Иллюзия обмана 2
+                                                <span class="top-film__badge badge">8.8</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Из машины
+                                                <span class="top-film__badge badge">8.5</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Люси
+                                                <span class="top-film__badge badge">8.2</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Выхода нет
+                                                <span class="top-film__badge badge">8.0</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Стражи галактики
+                                                <span class="top-film__badge badge">7.9</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Человек муравей
+                                                <span class="top-film__badge badge">7.7</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Месть от кутюр
+                                                <span class="top-film__badge badge">7.5</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Люди Икс
+                                                <span class="top-film__badge badge">7.4</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Занесло
+                                                <span class="top-film__badge badge">7.3</span>
+                                          </a>
+                                          <a class="top-films__item list-group-item" href="#">Дочь Бога
+                                                <span class="top-film__badge badge">7.2</span>
+                                          </a>
+
+                                    </div>
                               </div>
                         </div>
 
