Закончила работу над проекктом

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                               <!-- Collect the nav links, forms, and other content for toggling -->
                               <div class="collapse navbar-collapse" id="navbar-top">
                                     <ul class="nav navbar-nav navbar-left">
-                                          <li class="active"><a href="#">Главная <span
+                                          <li class="active"><a href="index.html">Главная <span
                                                             class="sr-only">(current)</span></a>
                                           </li>
-                                          <li><a href="#">Фильмы</a></li>
+                                          <li><a href="page.html">Фильмы</a></li>
                                           <li><a href="#">Сериалы</a></li>
                                           <li><a href="#">Контакты</a></li>
                                     </ul>
@@ -499,8 +499,8 @@
                                     </div>
                               </article>
                         </section>
-
                   </div>
+
                   <div class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
 
                         <div class="vertical-slider panel panel-info visible-lg visible-md">
