--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
       <header class="header">
             <div class="header-logo">
                   <div class="container">
@@ -51,7 +50,6 @@
                                           <li><a href="#">Сериалы</a></li>
                                           <li><a href="#">Контакты</a></li>
                                     </ul>
-
                                     <ul class="nav navbar-nav navbar-right">
                                           <li><a href="#">Новинки</a></li>
                                           <li><a href="#">Рейтинг</a></li>
@@ -66,8 +64,6 @@
       <div class="container">
             <div class="row">
                   <div class="main col-lg-9 col-lg-push-3 col-md-8 col-md-push-4">
-
-
                         <section class="site-search panel panel-info hidden-lg hidden-md">
                               <div class="panel-heading">Поиск</div>
                               <div class="panel-body">
@@ -90,8 +86,7 @@
                                     <ul class="user-login__tabs nav nav-tabs" role="tablist">
                                           <li role="presentation" class="active"><a href="#user-login-sidebar"
                                                       aria-controls="user-login-sidebar" role="tab" data-toggle="tab">
-                                                      <span class="glyphicon glyphicon-log-in"></span>
-                                                </a>
+                                                      <span class="glyphicon glyphicon-log-in"></span></a>
                                           </li>
                                           <li role=" presentation"><a href="#user-registration-sidebar"
                                                       aria-controls="user-registration-sidebar" role="tab"
@@ -99,9 +94,7 @@
                                                       <span class="glyphicon glyphicon-user"></span>
                                                 </a>
                                           </li>
-
                                     </ul>
-
 
                                     <div class="user-login__content tab-content">
                                           <div role="tabpanel" class="tab-pane fade in active" id="user-login-sidebar">
@@ -137,8 +130,6 @@
                                                 </form>
                                           </div>
                                     </div>
-
-
 
                               </div>
                         </section>
